# daz-agent-sdk

./: .gitignore  AGENTS.md  AI_USAGE_INVENTORY.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  release-gate  requirements.txt  run
go/: README.md  agent.go  agent_test.go  config.go  config_test.go  conversation.go  conversation_test.go  fake_provider_test.go  fallback.go  fallback_test.go  go.mod  go.sum  logging.go  logging_test.go  provider.go  registry.go  registry_provider_test.go  registry_test.go  structured.go  structured_test.go  test_ollama_provider_test.go  types.go  types_test.go
go/capability/: image.go  image_codex.go  image_job.go  image_job_test.go  image_live_test.go  image_operation.go  image_operation_test.go  image_test.go  stt.go  stt_test.go  tts.go  tts_test.go
go/provider/: arbiter.go  arbiter_test.go  claude.go  claude_test.go  credential.go  credential_test.go  gemini.go  gemini_test.go  ollama.go  ollama_test.go  openai.go  openai_test.go
src/agent_sdk/: __init__.py  config.py  config_test.py  conversation.py  conversation_test.py  core.py  fallback.py  fallback_test.py  logging_.py  logging_test.py  main.py  registry.py  registry_test.py  types.py  types_test.py
src/agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/daz_agent_sdk/: __init__.py  config.py  config_test.py  conftest.py  conversation.py  conversation_test.py  core.py  embed_test.py  fallback.py  fallback_test.py  logging_.py  logging_test.py  main.py  main_test.py  registry.py  registry_test.py  structured.py  types.py  (+2 more)
(+36 files in other folders)
